# NoitaSettings

./: CMakeLists.txt  README.md  binops.hpp  compress_main.cpp  decompress.cpp  decompress_main.cpp  main.cpp  pixel_scenes.py  png_petri_main.cpp  settings_main.cpp  stream_info.py  utils.cpp  utils.hpp
.github/workflows/: build.yml
